Close #6 --- Squashed commit of the following:
commit 8bd14f9bad6190f002065067bb8185ac4c8356eb
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 10:34:55 2023 +0000

    add ogp for header/change lang html

commit bf5bf2997dd1278775b2607653a9fd0d9301c14f
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 10:34:25 2023 +0000

    add gtag for header

commit 27beff02dca6144860d948ddfd30bd820f84d372
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 10:32:59 2023 +0000

    add partytown settings

commit 25b51ae74844daab003efa154c0a70b23c9827db
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 10:32:46 2023 +0000

    add partytown

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,8 +12,8 @@ const posts = (await getCollection("blog")).sort(
 ---
 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns#">
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <style>
       ul {
