--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,8 +10,8 @@ type Props = CollectionEntry<"blog">["data"];
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns#">
     <BaseHead title={title} description={description} />
     <style>
       .title {
