--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns#">
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
