Close #8 --- Squashed commit of the following:
commit 900f305b59a315cfcf1d05dcf45c5fe37d03bfe1
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 01:34:21 2023 +0000

    add skills/bio/portfolio base

commit 279a62faa1419de449ea3608c17b53ad793caaf8
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 01:22:29 2023 +0000

    support sns link from consts

commit 14a8a7ed25329563429f82174535401f5b8cdcf5
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 01:22:03 2023 +0000

    rename site_repository_url

commit 3375a4a490e6bdfdff2462dbdca3a5834aa2bd13
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:47:53 2023 +0000

    change blog index order to desc

commit 6cfc6f70e5ada558002a8f03256770efba83e28d
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:40:08 2023 +0000

    change date format in blog

commit 5cee182ccaf5ed18e1a34838cb95c8e0094cb32b
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:38:50 2023 +0000

    extract astro repo url

commit c43d806296876be576649e8812591fa2fae6d347
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:36:55 2023 +0000

    modify Head for support slot

commit 5090c2ea00f393b55a500341d74accc9be00bb06
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:31:30 2023 +0000

    modify footer style

commit 10ccd0c6cd27b3fc7506ebf20777109b14b598af
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:19:53 2023 +0000

    modify footer

commit 01ce54eb3ddeedb3b89459b9f39fae6dc2593e3d
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 00:14:44 2023 +0000

    Rename BaseHead -> Head

commit eab87a880a67d557264f9989b8d0e7f08516d4ab


--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,24 @@
 ---
+import { ASTRO_REPOSITORY_URL, SITE_REPOSITORY_URL } from "../consts";
+
 const today = new Date();
 ---
 
 <footer>
-  &copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+  <div>
+    <p>&copy; 2023, Built with <a href={ASTRO_REPOSITORY_URL}>Astro</a></p>
+    <p>Also, the source code of this site is in this <a href={SITE_REPOSITORY_URL}>Repository</a></p>
+  </div>
 </footer>
+
 <style>
   footer {
     padding: 25px;
     text-align: center;
+    font-size: small;
+
+    & p {
+      margin: 0 auto;
+    }
   }
 </style>
