--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/BaseHead.astro";
+import Head from "../components/Head.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import Header from "../components/Header.astro";
@@ -11,8 +11,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns#">
-    <BaseHead title={title} description={description} />
+  <Head title={title} description={description}>
     <style>
       .title {
         font-size: 2em;
@@ -26,7 +25,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         font-style: italic;
       }
     </style>
-  </head>
+  </Head>
 
   <body>
     <Header />
