--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,20 +1,22 @@
 ---
-import { getCollection } from "astro:content";
-import BaseHead from "../../components/BaseHead.astro";
+import { CollectionEntry, getCollection } from "astro:content";
+import Head from "../../components/Head.astro";
 import Footer from "../../components/Footer.astro";
 import FormattedDate from "../../components/FormattedDate.astro";
 import Header from "../../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 
-const posts = (await getCollection("blog")).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
-);
+const sortDescByPubDateFunction = (
+  a: CollectionEntry<"blog">,
+  b: CollectionEntry<"blog">,
+) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf();
+
+const posts = (await getCollection("blog")).sort(sortDescByPubDateFunction);
 ---
 
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns#">
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  <Head title={SITE_TITLE} description={SITE_DESCRIPTION}>
     <style>
       ul {
         list-style-type: none;
@@ -32,7 +34,7 @@ const posts = (await getCollection("blog")).sort(
         color: #8e32dc;
       }
     </style>
-  </head>
+  </Head>
   <body>
     <Header />
     <main>
