--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
+import Head from "../components/Head.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
@@ -7,9 +7,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns#">
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
+  <Head title={SITE_TITLE} description={SITE_DESCRIPTION} />
   <body>
     <Header title={SITE_TITLE} />
     <main>
