--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,4 +1,5 @@
 ---
+import { GA_ID } from "../consts";
 import "../styles/global.css";
 
 interface Props {
@@ -44,15 +45,18 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
   <!-- Google tag (gtag.js) -->
   <script
     type="text/partytown"
-    src="https://www.googletagmanager.com/gtag/js?id=G-HY8ZR2YW2P"
+    src=`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`
   ></script>
-  <script type="text/partytown">
+  <script
+    type="text/partytown"
+    define:vars={{GA_ID}}
+  >
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag("js", new Date());
-    gtag("config", "G-HY8ZR2YW2P");
+    gtag("config", GA_ID);
   </script>
 
   <slot />
