--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,34 @@
 ---
-import { SITE_TITLE, SNS_SETTINGS } from "../consts";
-import HeaderLink from "./HeaderLink.astro";
+import {
+  SITE_TITLE,
+  HEADER_SNS_SETTINGS,
+  HEADER_CONTENT_SETTINGS,
+} from "../consts";
+import HeaderNavLink from "./HeaderNavLink.astro";
 import HeaderSnsLink from "./HeaderSnsLink.astro";
 ---
 
 <header>
+  <div>
+    {
+      HEADER_SNS_SETTINGS.map((setting) => {
+        const { url, name, icon, color } = setting;
+        return <HeaderSnsLink {color} {name} href={url} {icon} />;
+      })
+    }
+  </div>
   <h2>
     {SITE_TITLE}
   </h2>
   <nav>
-    <HeaderLink href="/">Home</HeaderLink>
-    <HeaderLink href="/bio">Bio</HeaderLink>
-    <HeaderLink href="/skills">Skills</HeaderLink>
-    <HeaderLink href="/portfolio">Portfolio</HeaderLink>
-    <HeaderLink href="/blog">Blog</HeaderLink>
-    {SNS_SETTINGS.map(setting => (
-      <HeaderSnsLink name={setting.name} href={setting.url}/>
-    ))}
+    {
+      HEADER_CONTENT_SETTINGS.map((setting) => {
+        const { name, icon, activeIcon, alt } = setting;
+        return (
+          <HeaderNavLink {name} {alt} href={`/${name}`} {icon} {activeIcon} />
+        );
+      })
+    }
   </nav>
 </header>
 <style>
@@ -25,5 +37,19 @@ import HeaderSnsLink from "./HeaderSnsLink.astro";
   }
   h2 {
     margin: 0.5em 0;
+  }
+  nav {
+    display: flex;
+    justify-content: space-around;
+  }
+  a {
+    text-decoration: none;
+    color: #444;
+  }
+  div {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    gap: 1em;
   }
 </style>
